--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"react-navigation": "^3.8.1",
 		"react-redux": "^7.0.2",
 		"redux": "^4.0.1",
-		"redux-thunk": "^2.3.0",
+		"redux-saga": "^1.0.2",
 		"rxjs": "^6.4.0"
 	},
 	"devDependencies": {
