--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"jest": "24.7.1",
 		"metro-react-native-babel-preset": "0.53.1",
 		"react-test-renderer": "16.8.3",
-		"remote-redux-devtools": "^0.5.16"
+		"redux-devtools-extension": "^2.13.8"
 	},
 	"jest": {
 		"preset": "react-native"
