--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,7 @@
         "spaced-comment": 0,
         "react/prefer-stateless-function": 0,
         "max-len": 0,
-        "import/prefer-default-export": 0
+        "import/prefer-default-export": 0,
+        "react/jsx-tag-spacing": 0
     }
 }
