--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,8 @@
         "react/prefer-stateless-function": 0,
         "max-len": 0,
         "import/prefer-default-export": 0,
-        "react/jsx-tag-spacing": 0
+        "react/jsx-tag-spacing": 0,
+        "prefer-template": 0,
+        "no-restricted-syntax": 0
     }
 }
