--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"react-intl": "^2.8.0",
 		"react-native": "0.59.4",
 		"react-native-gesture-handler": "^1.1.0",
+		"react-native-i18n": "^2.0.15",
+		"react-native-simple-store": "^1.3.0",
 		"react-native-vector-icons": "^6.4.2",
 		"react-navigation": "^3.8.1",
 		"react-redux": "^7.0.2",
