--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
 		"babel-plugin-import": "^1.11.0",
 		"eslint": "^4.19.1",
 		"eslint-config-airbnb": "^16.1.0",
+		"eslint-plugin-import": "^2.17.2",
+		"eslint-plugin-jsx-a11y": "^6.2.1",
+		"eslint-plugin-react": "^7.13.0",
+		"eslint-plugin-react-native": "^3.7.0",
 		"jest": "24.7.1",
 		"metro-react-native-babel-preset": "0.53.1",
 		"react-test-renderer": "16.8.3",
