--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react-native-gesture-handler": "^1.1.0",
 		"react-native-i18n": "^2.0.15",
 		"react-native-linear-gradient": "^2.5.6",
+		"react-native-swiper": "^1.6.0-nightly.3",
 		"react-native-vector-icons": "^6.4.2",
 		"react-navigation": "^3.8.1",
 		"react-redux": "^7.0.2",
